# rust-malloc-testing

./: Cargo.toml  README.md
cmalloc-demo/: CMakeLists.txt  demo.c
cmalloc-demo/src/: main.c  utf_string.c  utf_string.h
comalloc/: Cargo.toml
full-alloc/: Cargo.toml
full-alloc/src/: main.rs
src/: main.rs
