[package]
name = "rust-malloc-test"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
